<resources>
    <string name="app_name">Dietary Test XML</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="take_photo_button">take photo</string>
    <string name="gallery_button">Gallery</string>
    <string name="rotate_button">Rotate</string>
    <string name="camera_supporting_text">Keep a 30cm distance from food to camera</string>
    <string name="home_page_title">Home</string>
    <string name="report_title">Report</string>
    <string name="my_profile_title">My Profile</string>
    <string name="food_scanner">food scanner</string>
    <string name="health_profile_dialog_title">Health Profile</string>
    <string name="health_profile_dialog_negative_btn">Update</string>
    <string name="health_profile_dialog_positive_btn">Done</string>
    <string name="health_profile_dialog_message">Review your health profile: verify and update your information for accuracy.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age_label">Age</string>
    <string name="dummy_dialog_age">40 years old</string>
    <string name="weight_label">Weight</string>
    <string name="dummy_dialog_weight">70 kg</string>
    <string name="height_label">Height</string>
    <string name="dummy_dialog_height">170 cm</string>
    <string name="gender_label">Gender</string>
    <string name="dummy_dialog_gender">Man</string>
    <string name="save">Save</string>
    <string name="dummy_age">40</string>
    <string name="dummy_height">170</string>
    <string name="dummy_gender">Man</string>
    <string name="dummy_weight">70</string>
    <string-array name="gender">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
</resources>