<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:background="?attr/colorSurfaceContainer"
    android:layout_height="wrap_content"
    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="24dp"
        tools:context=".presentation.healthprofile.HealthProfileDialog">

        <TextView
            android:id="@+id/titleDialog"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_profile_dialog_title"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bodyDialog"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_profile_dialog_message"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDialog" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_age_100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyDialog"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/ageLabel"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/age_label"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/age"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dummy_dialog_age"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:dividerColor="?attr/colorOutline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            app:tint="?attr/colorOnSurface"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_scale_100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider1" />

        <TextView
            android:id="@+id/weightLabel"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/weight_label"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/weight"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dummy_dialog_weight"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:dividerColor="?attr/colorOutline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            app:tint="?attr/colorOnSurface"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_height_100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider2" />

        <TextView
            android:id="@+id/heightLabel"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/height_label"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <TextView
            android:id="@+id/height"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dummy_dialog_height"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:dividerColor="?attr/colorOutline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView5" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_male_100dp"
            app:tint="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider3" />

        <TextView
            android:id="@+id/genderLabel"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gender_label"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/gender"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dummy_dialog_gender"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider4"
            android:layout_width="wrap_content"
            app:dividerColor="?attr/colorOutline"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView6" />

        <Button
            android:id="@+id/updateBtn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/health_profile_dialog_negative_btn"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/doneBtn"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <Button
            android:id="@+id/doneBtn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/health_profile_dialog_positive_btn"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>