<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.foodscanner.FoodScannerFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backIconButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/arrow_bg_color"
        android:clickable="true"
        android:focusable="true"
        app:shapeAppearanceOverlay="@style/RoundedIcon"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="180dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/bgCameraBtn"
        app:layout_constraintEnd_toEndOf="@+id/previewView"
        app:layout_constraintStart_toStartOf="@id/previewView"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/focusable_anim" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bgCameraSupporting"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
        app:shapeAppearanceOverlay="@style/RoundedContainer" />

    <TextView
        style="@style/TextAppearance.Material3.LabelLarge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/camera_supporting_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/bgCameraSupporting"
        app:layout_constraintEnd_toEndOf="@+id/bgCameraSupporting"
        app:layout_constraintStart_toStartOf="@+id/bgCameraSupporting"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <ImageView
        android:importantForAccessibility="no"
        android:id="@+id/bgCameraBtn"
        android:layout_width="0dp"
        android:src="@drawable/background"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/previewView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/take_picture_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:foregroundGravity="center"
        app:shapeAppearanceOverlay="@style/RoundedIcon"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/take_photo_button"
        android:src="@drawable/ic_photo_camera_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bgCameraBtn"
        app:layout_constraintTop_toTopOf="@+id/bgCameraBtn"
        android:focusable="true" />

    <Button
        android:id="@+id/galleryBtn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintBottom_toBottomOf="@+id/take_picture_btn"
        app:layout_constraintEnd_toStartOf="@+id/take_picture_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/take_picture_btn" />

    <Button
        android:id="@+id/rotateBtn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_button"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/take_picture_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/take_picture_btn"
        app:layout_constraintTop_toTopOf="@+id/take_picture_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>